feat(<home desktop section banner loyalty>)<--Adds banner loyalty component with your styles-->

--- a/styles/css/home/banner-layalty/vtex.flex-layout.css
+++ b/styles/css/home/banner-layalty/vtex.flex-layout.css
@@ -1,3 +1,18 @@
+/* DESKTOP */
+
+.flexCol--desktop__banner-container--loyalty {
+  position: relative;
+  padding: 30px 0;
+}
+
+@media (min-width: 1500px) {
+  .flexCol--desktop__banner-container--loyalty :global(.vtex-store-link-0-x-label) {
+    font-size: 15px;
+  }
+}
+
+/* MOBILE*/
+
 .flexCol--mobile__banner-container--loyalty {
   position: relative;
 }
