--- a/styles/css/home/middle-text/vtex.flex-layout.css
+++ b/styles/css/home/middle-text/vtex.flex-layout.css
@@ -4,3 +4,10 @@
    margin-right: auto;
    padding: 0 1vw;
 }
+
+@media (min-width: 1025px) {
+   .flexRowContent--global__home--middle-text {
+      width: 60%;
+      border: 1px solid #000 !important;
+   }
+}
