--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,5 +1,23 @@
 @font-face {
-  font-family: 'Lato,Lato-light,Lato-bold,Sans-Serif';
-  src        : url(assets/fonts/Lato-Bold.ttf), url(assets/fonts/Lato-Light.ttf), url(assets/fonts/Lato-Regular.ttf), url(assets/fonts/PTSerif-Regular.ttf);
+  font-family: 'Lato';
+  src        : url(assets/fonts/Lato-Regular.ttf);
+  font-size: 14px;
+}
+
+@font-face {
+  font-family: 'Lato-Bold';
+  src        : url(assets/fonts/Lato-Bold.ttf);
+  font-size: 14px;
+}
+
+@font-face {
+  font-family: 'Lato-Light';
+  src        : url(assets/fonts/Lato-Light.ttf);
+  font-size: 14px;
+}
+
+@font-face {
+  font-family: 'serif';
+  src        : url(assets/fonts/PTSerif-Regular.ttf);
   font-size: 14px;
 }
