--- a/styles/css/search/vtex.product-summary.css
+++ b/styles/css/search/vtex.product-summary.css
@@ -1,3 +1,7 @@
+.container--global__search-result--product {
+  margin: 0 10px;
+}
+
 .containerNormal--desktop__search-gallery--product {
   font-size  : 13px;
   font-weight: 700;
