--- a/styles/css/header/minicart/vtex.flex-layout.css
+++ b/styles/css/header/minicart/vtex.flex-layout.css
@@ -1,3 +1,4 @@
+/* MOBILE MINICART */
 .flexRow--product-list__content--border {
   border-top: 1px solid #000;
   padding-bottom: 15px;
@@ -13,4 +14,20 @@
 
 .flexColChild--main-container__remove {
   padding-top: 35px;
+}
+
+/* MOBILE MINICART*/
+
+.flexRowContent--header-container__search-login-minicart :global(.vtex-button) {
+  outline   : none;
+  background: none;
+}
+
+.flexRowContent--header-container__search-login-minicart .stretchChildrenWidth {
+  width: fit-content !important;
+}
+
+.flexRowContent--header-container__search-login-minicart :global(.vtex-button__label) {
+  padding: 0;
+  margin : 0 19px;
 }
