--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -1,15 +1,9 @@
-.headerRowBackground--header__banner--top--mobile {
-  background: #3b493f;
-}
-
-.headerRowContentContainer--header__banner--top--mobile {
-  height: 3rem;
-}
 
 .headerRowContainer--mobile__haeder-bottom {
   justify-content: center;
-  height: 4.5rem;
-  background: #fff;
+  height         : 4.5rem;
+  background     : #fff;
+  box-shadow     : 0 0px 47px #88888847;
 }
 
 .headerRowContainer--mobile__haeder-bottom :global(.vtex-flex-layout-0-x-flexRow) {
@@ -22,17 +16,9 @@
 
 /* DESKTOP */
 
-.headerRowBackground--header__banner-top {
-  background: #3b493f;
-  height    : 30px;
-}
-
 .headerRowBackground--desktop__header-bottom {
   background: #fff;
-}
-
-.headerRowContainer--header__banner-top {
-  justify-content: center;
+  box-shadow: 0 0px 47px #88888847;
 }
 
 .headerRowContainer--desktop__header-bottom :global(.vtex-flex-layout-0-x-flexRow) {
